# wayfire-security-context-v1

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: ci.yml
metadata/: extra-security-context-v1.xml  meson.build  security-context-v1.xml
proto/: meson.build
src/: meson.build  wayfire-extra-security-context-v1.cpp  wayfire-security-context-v1.cpp  wlr_security_context_v1.c
